--- a/client/index.html
+++ b/client/index.html
@@ -1,29 +1,10 @@
 <html ng-app="myApp">
 <head>
-	<title>BookStore</title>
+	<title>Movie Review</title>
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<!-- <nav class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Bookstore</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#/books/add">Add Book</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav> -->
-
     <div class="container">
     	<div class="row">
     		<div class="col-md-12">
@@ -39,6 +20,5 @@
 	<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="/app.js"></script>
 	<script src="/controllers/books.js"></script>
-	<script src="/controllers/genres.js"></script>
 </body>
 </html>
