Add filter search

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,6 @@
 	<script src="/bower_components/angular-route/angular-route.js"></script>
 	<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="/app.js"></script>
-	<script src="/controllers/books.js"></script>
+	<script src="/controllers/reviews.js"></script>
 </body>
 </html>
